base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prof-pay-server
  namespace: profpay
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: prof-pay-server
  template:
    metadata:
      labels:
        app: prof-pay-server
    spec:
      containers:
        - name: prof-pay-server
          image: PROF_PAY_SERVER_IMAGE_PLACEHOLDER
          ports:
            - containerPort: 8284   # HTTP
            - containerPort: 50051  # gRPC
            - containerPort: 8443   # HTTPS
      imagePullSecrets:
        - name: dockerhub-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blockchain-indexer
  namespace: profpay
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: blockchain-indexer
  template:
    metadata:
      labels:
        app: blockchain-indexer
    spec:
      containers:
        - name: blockchain-indexer
          image: BLOCKCHAIN_IMAGE_PLACEHOLDER
          imagePullPolicy: Always
          ports:
            - containerPort: 8085
