base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prof-pay-server
  namespace: profpay
spec:
  type: NodePort
  selector:
    app: prof-pay-server
  ports:
    - name: http
      port: 8284
      targetPort: 8284
      nodePort: 30284
    - name: grpc-bot
      port: 50051
      targetPort: 50051
      nodePort: 30051
    - name: grpc
      port: 8443
      targetPort: 8443
      nodePort: 30443
---
apiVersion: v1
kind: Service
metadata:
  name: blockchain-indexer
  namespace: profpay
spec:
  type: NodePort
  selector:
    app: blockchain-indexer
  ports:
    - name: http
      port: 8085
      targetPort: 8085
      nodePort: 30085
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: profpay
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redisinsight
  namespace: profpay
spec:
  type: NodePort
  selector:
    app: redisinsight
  ports:
    - port: 5540
      targetPort: 5540
      nodePort: 30540
